# shok

./: .gitignore  Cargo.toml  LICENSE  README.md  run.bat  run.sh  update.sh
src/: main.rs
static/: about.html  api.js  atoms.html  auth.html  chat.html  http.js  index.html  ks.css  make-tokens.html  marx.css  notes.html  old-space.html  panbox.js  social.html  space.html  speak.html  style.css  svs.js  tell.html  upload.html  uploads.js
static/pile/: articleposts.js  lisp.js  milk.html  sound.html
uploaded/: moo.txt
