[package]
name = "shok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.21"
salvo = { version= "*", features = ["rustls", "compression", "cors", "caching-headers", "serve-static", "size-limiter", "rate-limiter", "logging", "quinn", "proxy"]}
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "*"
# surrealdb = { version = "1.0.0-beta.9+20230402", features = ["scripting", "http"]}
tokio = { version = "^1", features = ["full"] }
mimalloc = {version = "*", default-features = false, features = ["secure", "local_dynamic_tls"]}
tracing = "*"
tracing-subscriber = "*"
redb = { version = "*", features = ["logging"]}
rand = "*"
sthash = { git = "https://github.com/jedisct1/rust-sthash" }
lazy_static = "*"
zstd = "*"


[profile.dev]
codegen-units = 16
debug = true
lto = "off"
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = 'abort'