[package]
name = "shok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features = ["backtrace"]}
base64 = "^0.21"
cocoon = "*"
# crossbeam-channel = "*"
dashmap = {version = "*"}
salvo = { version= "0.49.1", features = ["rustls", "compression", "cors", "cache", "caching-headers", "serve-static", "sse", "size-limiter", "rate-limiter", "logging", "proxy"]}
serde = { version = "^1", features = ["derive"] }
serde_json = "*"
# surrealdb = { version = "1.0.0-beta.9+20230402", features = ["scripting", "http"]}
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = { version = "0.3", default-features = false }
mimalloc = {version = "*", default-features = false, features = ["secure", "local_dynamic_tls"]}
parking_lot = "*"
tracing = "*"
tracing-subscriber = "*"
# tempfile = "*"
redb = { version = "^1"} #, features = ["logging"]
rand = "*"
sthash = { git = "https://github.com/jedisct1/rust-sthash" }
lazy_static = "*"
zstd = "*"
tantivy = { version = "^0.20", features = ["zstd-compression"]}

[profile.dev]
codegen-units = 16
debug = true
lto = "off"
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = 'abort'